preferences can be removed | avoid duplicates | hit return to add a preference doesn't reload the page

--- a/main.css
+++ b/main.css
@@ -126,3 +126,12 @@ body {
   .spacer {
       display: block;
   }
+
+  .hide {
+    display: none;
+  }
+      
+  .preference:hover > .hide {
+    display: inline;
+    color: red;
+  }
